# mlops-sales-forecasting

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.mlflow  Makefile  README.md  docker-compose.yml  init-db.sql  prefect.yaml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: main.yml
configs/: dev.yaml  gcp.yaml  monitoring.yaml  prod.yaml  staging.yaml  training.yaml
docs/: deployment.md
flows/: auto_retrain_flow.py  training_flow.py
infrastructure/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
monitoring/: prometheus.yml
scripts/: calculate_baseline_dashboard.py  compare_single_vs_batch.py  cost_summary.py  inspect_manifest_repro.py  reset_pipeline.py  retrain_from_manifest.py  run_drift_demo.py  run_performance_demo.py  setup_prefect.py  simulate_ground_truth.py  stress_test.py
src/: compare_single_vs_current_day1.py  constants.py
src/api/: app.py  schema.py
src/configs/: loader.py
src/data/: versioning.py
src/deployment/: cli.py  config.py  gcp.py
src/inference/: adapters.py  contracts.py  forecasting_policy.py  forecasting_provider.py  model_loader.py  model_manager.py  pipeline.py  router.py
src/monitoring/: alerts.py  config.py  costs.py  dashboard.py  data_quality.py  drift.py  feature_drift.py  performance.py  prediction_logger.py  serving.py  trigger.py
tests/: conftest.py  test_forecasting_provider.py  test_inference_contracts.py  test_inference_pipeline.py  test_inference_pipeline_dispatch.py  test_model_factory.py  test_target_transform.py
(+29 files in other folders)
